43rd(Add pause and settings menus, improve animation logic)
Introduces PauseMenu and SettingsState classes with corresponding UI and logic, including button handling and rendering. Refactors animation handling in AnimationComponent and Player to support attack animations and priority logic. Updates GameState to support pausing, unpausing, and menu navigation. Adds Tile class and integrates new files into the build system. Minor fixes and improvements to Button and State classes for better input and state management.

--- a/OpenWorldRPG.vcxproj.filters
+++ b/OpenWorldRPG.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="Components">
       <UniqueIdentifier>{ed76763b-ca4c-498f-9ce0-8ccbb2899ef8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Tile">
+      <UniqueIdentifier>{bf742f38-41bc-4825-aa34-f46c57d889fa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GUI">
+      <UniqueIdentifier>{7507e7ab-4d43-4624-8714-deda94f1298d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -60,6 +66,15 @@
     <ClCompile Include="HitboxComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="Tile.cpp">
+      <Filter>Tile</Filter>
+    </ClCompile>
+    <ClCompile Include="PauseMenu.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="SettingsState.cpp">
+      <Filter>States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -94,6 +109,15 @@
     </ClInclude>
     <ClInclude Include="HitboxComponent.h">
       <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Tile.h">
+      <Filter>Tile</Filter>
+    </ClInclude>
+    <ClInclude Include="PauseMenu.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="SettingsState.h">
+      <Filter>States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
